# monkas

./: .clang-format  .gitignore  CMakeLists.txt  README.md  lexer.cc  main.cc  token.h
monkas/: CMakeLists.txt  lexer.h  token.h
tests/: CMakeLists.txt  lexer_test.cc
